# gesture-studio

./: .gitignore  package.json
docs/: 01-overview.md  02-architecture.md  04-database.md  05-api.md  07-events.md  08-config.md  09-security.md  10-flows.md  11-decisions.md  12-glossary.md
docs/03-domains/: actions.md  camera.md  gestures.md  training.md  vision.md
docs/06-services/: gesture-service.md
frontend/: index.html  package.json
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/components/: CameraPreview.tsx  Layout.tsx
frontend/src/lib/: handLandmarker.ts
frontend/src/pages/: ActionsPage.tsx  DashboardPage.tsx  GesturesPage.tsx  SettingsPage.tsx  TrainingPage.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/actions/: commands.rs  mod.rs
src-tauri/src/app/: commands.rs  error.rs  events_bridge.rs  mod.rs
src-tauri/src/camera/: commands.rs  mod.rs  wmf.rs
src-tauri/src/config/: mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/gestures/: commands.rs  mod.rs
src-tauri/src/landmarks/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: mod.rs
src-tauri/src/storage/: commands.rs  mod.rs
src-tauri/src/trainer/: commands.rs  mod.rs
src-tauri/src/utils/: mod.rs
src-tauri/src/vision/: commands.rs  mod.rs
